cmake_minimum_required(VERSION 3.8)
project(my_cpp_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)

# add executable
add_executable(my_test_node src/my_test_node.cpp)

# link dependencies
ament_target_dependencies(my_test_node rclcpp)

# install executable
install(TARGETS
  my_test_node
  DESTINATION lib/${PROJECT_NAME}
)

# register package
ament_package()